--- a/vechungtoi.html
+++ b/vechungtoi.html
@@ -60,7 +60,7 @@
 </nav>
 <!--	xong phan navbar   -->
 	<main>
-	<section id="page-header" class="mb-5">
+		<section id="page-header">
 			<div class="container pt-5">
 			<div class="text-light">
 				<h2>MY PHUOC CLINIC</h2>
@@ -68,58 +68,89 @@
 				<button type="button" class="btn btn-primary mt-4">ĐẶT LỊCH HẸN</button>
 			</div>
 			</div>
-	</section>
-	<section id="service">
-		<div class="container mb-5">
-			<div class="row d-flex justify-content-center">
+		</section>
+		<section id="about" class="py-4">
+		<div class="container">
+			<div class="row d-flex align-items-center">
+				<div class="col-lg-6 mb-3">
+					<img src="img/about-pic 1.jpg" class="img-fluid">
+				</div>
+				<div class="col-lg-6 mb-3">
+					<h2 class="text-primary">VỀ CHÚNG TÔI</h2>
+					<p> Từ năm 2017, chúng tôi đã cung cấp cho bệnh nhân các phương pháp điều trị chăm sóc răng miệng tốt nhất & Đội ngũ chuyên gia nha sĩ có tay nghề cao & Trang thiết bị máy móc hiện đại. </p>
+					<p><i class="fas fa-chevron-circle-right text-danger me-3"></i>Bác sĩ có tay nghề cao và giàu kinh nghiệm</p>
+					<p><i class="fas fa-chevron-circle-right text-danger me-3"></i>99,99% Khách hàng tin tưởng chọn Nha Khoa Mỹ Phước</p>
+					<p><i class="fas fa-chevron-circle-right text-danger me-3"></i>Trang thiết bị máy móc hiện đại</p>
+					<button type="button" class="btn btn-primary">XEM THÊM</button>
+				</div>
 			</div>
+		</div>	
+	</section>
+	<section id="why">
+		<div class="container">
+			<h3 class="pt-3 text-primary"><img src="img/TITLE-ICON.png">TẠI SAO CHỌN NHA KHOA MỸ PHƯỚC</h3>
 			<div class="row">
-				<div class="col-sm-6 col-lg-4 mb-4">
-					<div class="bg-light p-3 text-center">
-						<img src="img/dv_img1 1.jpg" class="img-fluid">
-						<h4 class="pt-4"><a href="#">BỌC RĂNG SỨ</a></h4>
-						<p>Bọc răng sứ ivy - không còn sỉn màu, thưa, hô, khập khểnh mòn men....</p>
+				<div class="col-lg-6 pt-3">
+					<div class="row">
+						<div class="col-6">
+							<h5 class="text-primary">HỖ TRỢ KHÁCH HÀNG 24/7</h5>
+							<p>Đến với nha khoa Mỹ Phước bạn sẽ được hỗ trợ 24/7</p>
+						</div>
+						<div class="col-6">
+							<h5 class="text-primary">GIÁ CẢ HỢP LÝ</h5>
+							<p>Nha khoa Mỹ Phước luôn hướng khách hàng làm chủ tài khoản trong quá trình điệu trị</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-6">
+							<h5 class="text-primary">BÁC SĨ GIÀU KINH NGHIỆM</h5>
+							<p>Đội ngũ y bác sĩ giàu kinh nghiệm và chuyên môn giỏi</p>
+						</div>
+						<div class="col-6">
+							<h5 class="text-primary">TRANG THIẾT BỊ HIỆN ĐẠI</h5>
+							<p>Nha khoa Mỹ Phước đầu tư trang thiết bị mới để phục vụ công tác điều trị.</p>
+						</div>
 					</div>
 				</div>
-				<div class="col-sm-6 col-lg-4 mb-3">
-					<div class="bg-light p-3 text-center">
-						<img src="img/dv_img2 1.jpg" class="img-fluid">
-						<h4 class="pt-4"><a href="#">DÁN SỨ VENEER</a></h4>
-						<p>Dán sứ veneer hạn chế tối đa mài răng, răng xinh đều đẹp, không gây e buốt, kết quả bền...</p>
-					</div>
+			</div>
+		</div>	
+	</section>
+	<section>
+		<div class="container">
+			<div class="row text-center justify-content-center pt-3">
+				<div class="col-lg-7 mb-3 ">
+					<h2 class="text-primary">ĐỘI NGŨ BÁC SĨ</h2>
+					<p>Nha khoa Mỹ Phước hội tụ những bác sĩ giàu kinh nghiệm,tận tâm với nghề
+Phong cách làm việc chuyên nghiệp không ngừng trao dồi kiến thức.</p>
 				</div>
-				<div class="col-sm-6 col-lg-4 mb-3">
-					<div class="bg-light p-3 text-center">
-						<img src="img/dv_img3 1.jpg" class="img-fluid">
-						<h4 class="pt-4"><a href="#">TẨY TRẮNG RĂNG</a></h4>
-						<p>Tẩy trắng răng laser whitening nhanh chóng, an toàn - chỉ sau 60’ răng trắng bật tone từ...</p>
-					</div>
+			</div>
+			<div class="row mb-5">
+				<div class="col-lg-3 mb-3 text-center ">
+					<img src="img/Mask Group.png" class=" mb-3">
+					<h5 class="text-black fw-bold"> BS CKII ĐẶNG THỊ ÁI VY </h5>
+					<p class="text-secondary"> CHUYÊN KHOA NHA</p>
 				</div>
-				<div class="col-sm-6 col-lg-4 mb-3">
-					<div class="bg-light p-3 text-center">
-						<img src="img/dv_img4 1.jpg" class="img-fluid">
-						<h4 class="pt-4"><a href="#">NIỀNG RĂNG THẨM MỸ</a></h4>
-						<p>Niềng răng mắc cài và niềng răng khay trong cho hàm răng đều đẹp, chuẩn khớp cắn...</p>
-					</div>
+				<div class="col-lg-3 mb-3 text-center ">
+					<img src="img/Mask Group 2.png" class=" mb-3">
+					<h5 class="text-black fw-bold"> BS NGUYỄN THỊ HUYỀN </h5>
+					<p class="text-secondary"> CHUYÊN KHOA NHA</p>
 				</div>
-				<div class="col-sm-6 col-lg-4 mb-3">
-					<div class="bg-light p-3 text-center">
-						<img src="img/dv_img5 1.jpg" class="img-fluid">
-						<h4 class="pt-4"><a href="#">CẤY GHÉP RĂNG IMPLANT</a></h4>
-						<p>Trồng răng implant là một tiểu phẫu trong nha khoa áp dụng trong trường hợp mất răng...</p>
-					</div>
+				<div class="col-lg-3 mb-3 text-center ">
+					<img src="img/Mask Group 3.png" class=" mb-3">
+					<h5 class="text-black fw-bold"> BS LÊ THỊ HẠNH </h5>
+					<p class="text-secondary"> CHUYÊN KHOA NHA</p>
 				</div>
-				<div class="col-sm-6 col-lg-4 mb-3">
-					<div class="bg-light p-3 text-center">
-						<img src="img/dv_img6 1.jpg" class="img-fluid">
-						<h4 class="pt-4"><a href="#">TRÁM RĂNG THẨM MỸ</a></h4>
-						<p>Trong cuộc sống có rất nhiều nguyên nhân chủ quan và khách quan khiến răng của...</p>
-					</div>
+				<div class="col-lg-3 mb-3 text-center ">
+					<img src="img/Mask Group 4.png" class=" mb-3">
+					<h5 class="text-black fw-bold"> BS CKI LÊ TRỌNG TUẤN </h5>
+					<p class="text-secondary"> CHUYÊN KHOA NHA</p>
 				</div>
 				
+				
 			</div>
-		</div>		
-	</section></main>
+		</div>	
+	</section>
+	</main>
 	
 	
 	<footer class="bg-primary text-light">
